--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
     <script>
         // *** CONFIGURATION ***
-        const PROXY_URL = "https://gemini-api-proxy-xi-two.vercel.app/api/gemini"; 
+        const PROXY_URL = "https://ekojc.com/.netlify/functions/gemini-proxy";
         const MODEL_NAME = "gemini-2.5-flash"; 
 
         let chatHistory = [];
