--- a/index.html
+++ b/index.html
@@ -1,1 +1,248 @@
-<script src="chat.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Secured Gemini Chat Interface</title>
+    <!-- Load Tailwind CSS -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        /* Custom styles for aesthetic */
+        body {
+            font-family: 'Inter', sans-serif;
+            background-color: #0d1117; /* Dark background */
+            color: #c9d1d9;
+            height: 100vh;
+            overflow: hidden;
+        }
+        #login-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(13, 17, 23, 0.95);
+            z-index: 1000;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .message-box {
+            max-width: 768px;
+            margin: 0 auto;
+        }
+        .user-message {
+            background-color: #24344d; /* Slightly darker blue-gray */
+            align-self: flex-end;
+            border-bottom-right-radius: 0;
+        }
+        .model-message {
+            background-color: #1e2d3b; /* Dark blue-gray */
+            align-self: flex-start;
+            border-bottom-left-radius: 0;
+        }
+        /* Custom scrollbar for chat history */
+        #chat-history::-webkit-scrollbar {
+            width: 8px;
+        }
+        #chat-history::-webkit-scrollbar-thumb {
+            background-color: #304159;
+            border-radius: 10px;
+        }
+        #chat-history::-webkit-scrollbar-track {
+            background-color: #161b22;
+        }
+    </style>
+</head>
+<body>
+
+    <!-- 1. Login Overlay (Initial View) -->
+    <div id="login-overlay" class="p-4">
+        <div class="bg-[#161b22] p-8 rounded-xl shadow-2xl w-full max-w-sm">
+            <h2 class="text-3xl font-bold mb-6 text-center text-[#58a6ff]">Secured Access</h2>
+            <p class="text-red-400 mb-4 text-center hidden" id="login-error-message"></p>
+            <div class="space-y-4">
+                <input type="text" id="username" placeholder="Username" class="w-full p-3 rounded-lg bg-[#0d1117] border border-[#30363d] text-white focus:ring-[#58a6ff] focus:border-[#58a6ff]">
+                <input type="password" id="password" placeholder="Password" class="w-full p-3 rounded-lg bg-[#0d1117] border border-[#30363d] text-white focus:ring-[#58a6ff] focus:border-[#58a6ff]">
+            </div>
+            <button onclick="handleLogin()" class="w-full mt-6 py-3 bg-[#58a6ff] text-gray-900 font-semibold rounded-lg hover:bg-[#79b8ff] transition duration-200 shadow-md">
+                Log In
+            </button>
+        </div>
+    </div>
+
+    <!-- 2. Main Chat Application (Hidden until login) -->
+    <div id="app" class="h-screen flex flex-col hidden">
+        <header class="bg-[#161b22] shadow-lg p-4">
+            <h1 class="text-2xl font-bold text-[#58a6ff] text-center">AI Chat (Powered by Gemini)</h1>
+        </header>
+
+        <!-- Chat History -->
+        <main id="chat-history" class="flex-grow overflow-y-auto p-4 space-y-4 bg-[#0d1117]">
+            <div class="message-box model-message p-3 rounded-xl max-w-lg shadow-md">
+                Hello! I'm here to help. Ask me anything, and I'll use Google Search to give you up-to-date answers.
+            </div>
+        </main>
+
+        <!-- Input Area -->
+        <footer class="bg-[#161b22] p-4 border-t border-[#30363d]">
+            <div class="message-box flex items-center">
+                <input type="text" id="user-input" placeholder="Ask a question..." class="flex-grow p-3 rounded-l-xl bg-[#1e2d3b] text-white border border-[#30363d] focus:outline-none focus:ring-2 focus:ring-[#58a6ff]">
+                <button id="send-button" onclick="sendMessage()" class="bg-[#58a6ff] text-gray-900 font-semibold p-3 rounded-r-xl hover:bg-[#79b8ff] transition duration-200 flex items-center justify-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="22" y1="2" x2="11" y2="13"></line><polygon points="22 2 15 22 11 17 2 13 22 2"></polygon></svg>
+                </button>
+            </div>
+            <div id="loading-indicator" class="text-center mt-2 text-[#79b8ff] hidden">
+                Thinking...
+            </div>
+        </footer>
+    </div>
+
+    <script>
+        // --- Global State ---
+        let chatHistory = [];
+        const CHAT_ENDPOINT = '/.netlify/functions/gemini-proxy'; // Netlify function URL
+        const loginOverlay = document.getElementById('login-overlay');
+        const mainApp = document.getElementById('app');
+        const chatHistoryDiv = document.getElementById('chat-history');
+        const userInput = document.getElementById('user-input');
+        const sendButton = document.getElementById('send-button');
+        const loadingIndicator = document.getElementById('loading-indicator');
+
+        // --- Utility Functions ---
+
+        /**
+         * Safely scrolls the chat history to the bottom.
+         */
+        function scrollChatToBottom() {
+            chatHistoryDiv.scrollTop = chatHistoryDiv.scrollHeight;
+        }
+
+        /**
+         * Displays a message in the chat history.
+         * @param {string} text The content of the message.
+         * @param {string} role 'user' or 'model'.
+         */
+        function displayMessage(text, role) {
+            const messageElement = document.createElement('div');
+            // Use flex classes for message alignment
+            messageElement.className = `flex ${role === 'user' ? 'justify-end' : 'justify-start'}`;
+
+            const contentDiv = document.createElement('div');
+            // Use dynamic classes for styling
+            contentDiv.className = `message-box p-3 rounded-xl max-w-xl shadow-lg whitespace-pre-wrap ${role === 'user' ? 'user-message' : 'model-message'}`;
+            contentDiv.innerText = text;
+
+            messageElement.appendChild(contentDiv);
+            chatHistoryDiv.appendChild(messageElement);
+            scrollChatToBottom();
+        }
+
+        /**
+         * Handles sending the user's message to the Netlify proxy function.
+         */
+        async function sendMessage() {
+            const prompt = userInput.value.trim();
+            if (!prompt) return;
+
+            // Display user message and clear input
+            displayMessage(prompt, 'user');
+            chatHistory.push({ role: 'user', text: prompt });
+            userInput.value = '';
+
+            // Disable input and show loading
+            userInput.disabled = true;
+            sendButton.disabled = true;
+            loadingIndicator.classList.remove('hidden');
+
+            try {
+                // Call the Netlify proxy function
+                const response = await fetch(CHAT_ENDPOINT, {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ prompt: prompt, history: chatHistory })
+                });
+
+                const result = await response.json();
+
+                if (response.ok) {
+                    // Extract text from the Gemini response structure
+                    const candidate = result.candidates?.[0];
+                    const modelText = candidate?.content?.parts?.[0]?.text;
+
+                    if (modelText) {
+                        displayMessage(modelText, 'model');
+                        chatHistory.push({ role: 'model', text: modelText });
+                    } else {
+                        displayMessage("Sorry, I received an empty or malformed response from the AI.", 'model');
+                    }
+
+                } else {
+                    // Display error from the Netlify function
+                    const errorMessage = result.error || "An unknown error occurred on the server.";
+                    displayMessage(`Error: ${errorMessage}`, 'model');
+                }
+
+            } catch (error) {
+                console.error('Fetch error:', error);
+                displayMessage('Network error: Could not connect to the server.', 'model');
+            } finally {
+                // Re-enable input and hide loading
+                userInput.disabled = false;
+                sendButton.disabled = false;
+                loadingIndicator.classList.add('hidden');
+                userInput.focus();
+            }
+        }
+
+        /**
+         * Handles the client-side login attempt.
+         */
+        function handleLogin() {
+            const usernameInput = document.getElementById('username');
+            const passwordInput = document.getElementById('password');
+            const errorMessage = document.getElementById('login-error-message');
+
+            const enteredUsername = usernameInput.value;
+            const enteredPassword = passwordInput.value;
+
+            // Hardcoded credentials for client-side protection
+            const correctUsername = "bongothedog";
+            const correctPassword = "81621070318162107033";
+
+            if (enteredUsername === correctUsername && enteredPassword === correctPassword) {
+                // Successful login
+                loginOverlay.classList.add('hidden');
+                mainApp.classList.remove('hidden');
+                userInput.focus(); // Focus on the chat input
+            } else {
+                // Failed login
+                errorMessage.innerText = "Invalid username or password. Please try again.";
+                errorMessage.classList.remove('hidden');
+                passwordInput.value = ''; // Clear password field
+            }
+        }
+
+
+        // --- Event Listeners and Initialization ---
+
+        window.onload = () => {
+            // Check for Enter key press on the input field
+            userInput.addEventListener('keypress', function(e) {
+                if (e.key === 'Enter') {
+                    sendMessage();
+                }
+            });
+
+            // Check for Enter key press on the password field
+            document.getElementById('password').addEventListener('keypress', function(e) {
+                if (e.key === 'Enter') {
+                    handleLogin();
+                }
+            });
+            document.getElementById('username').focus();
+        };
+
+    </script>
+</body>
+</html>
