--- a/index.html
+++ b/index.html
@@ -205,8 +205,9 @@
          * Handles the client-side login attempt.
          */
         function handleLogin() {
-            const enteredUsername = usernameInput.value;
-            const enteredPassword = passwordInput.value;
+            // FIX: Use .trim() to eliminate any accidental whitespace from the user input
+            const enteredUsername = usernameInput.value.trim(); 
+            const enteredPassword = passwordInput.value.trim();
 
             // Hardcoded credentials for client-side protection
             const correctUsername = "bongothedog";
