--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 </head>
 <body>
 
-    <!-- 1. Login Overlay (Initial View) -->
+    <!-- 1. Login Overlay (COMMENTED OUT TO DISABLE LOGIN) -->
+    <!--
     <div id="login-overlay" class="p-4">
         <div class="bg-[#161b22] p-8 rounded-xl shadow-2xl w-full max-w-sm">
             <h2 class="text-3xl font-bold mb-6 text-center text-[#58a6ff]">Secured Access</h2>
@@ -65,15 +66,15 @@
                 <input type="text" id="username" placeholder="Username" class="w-full p-3 rounded-lg bg-[#0d1117] border border-[#30363d] text-white focus:ring-[#58a6ff] focus:border-[#58a6ff]">
                 <input type="password" id="password" placeholder="Password" class="w-full p-3 rounded-lg bg-[#0d1117] border border-[#30363d] text-white focus:ring-[#58a6ff] focus:border-[#58a6ff]">
             </div>
-            <!-- IMPORTANT CHANGE: We use an ID to bind the click event in JS -->
             <button id="login-button" class="w-full mt-6 py-3 bg-[#58a6ff] text-gray-900 font-semibold rounded-lg hover:bg-[#79b8ff] transition duration-200 shadow-md">
                 Log In
             </button>
         </div>
     </div>
+    -->
 
-    <!-- 2. Main Chat Application (Hidden until login) -->
-    <div id="app" class="h-screen flex flex-col hidden">
+    <!-- 2. Main Chat Application (Made visible by removing 'hidden' class) -->
+    <div id="app" class="h-screen flex flex-col"> 
         <header class="bg-[#161b22] shadow-lg p-4">
             <h1 class="text-2xl font-bold text-[#58a6ff] text-center">AI Chat (Powered by Gemini)</h1>
         </header>
@@ -104,18 +105,18 @@
         // --- Global State & Element References ---
         let chatHistory = [];
         const CHAT_ENDPOINT = '/.netlify/functions/gemini-proxy'; 
-        const loginOverlay = document.getElementById('login-overlay');
+        // const loginOverlay = document.getElementById('login-overlay'); // No longer needed
         const mainApp = document.getElementById('app');
         const chatHistoryDiv = document.getElementById('chat-history');
         const userInput = document.getElementById('user-input');
         const sendButton = document.getElementById('send-button');
         const loadingIndicator = document.getElementById('loading-indicator');
         
-        // Login elements
-        const loginButton = document.getElementById('login-button');
-        const usernameInput = document.getElementById('username');
-        const passwordInput = document.getElementById('password');
-        const loginErrorMessage = document.getElementById('login-error-message');
+        // Login elements (no longer needed for execution)
+        // const loginButton = document.getElementById('login-button');
+        // const usernameInput = document.getElementById('username');
+        // const passwordInput = document.getElementById('password');
+        // const loginErrorMessage = document.getElementById('login-error-message');
 
 
         // --- Utility Functions ---
@@ -202,55 +203,20 @@
             }
         }
 
-        /**
-         * Handles the client-side login attempt.
-         */
-        function handleLogin() {
-            const enteredUsername = String(usernameInput.value).trim(); 
-            const enteredPassword = String(passwordInput.value).trim();
-
-            // Direct comparison using the required credentials
-            const correctUsername = "bongothedog";
-            const correctPassword = "81621070318162107033";
-
-            if (enteredUsername === correctUsername && enteredPassword === correctPassword) {
-                // Successful login
-                loginOverlay.classList.add('hidden');
-                mainApp.classList.remove('hidden');
-                userInput.focus(); // Focus on the chat input
-                loginErrorMessage.classList.add('hidden'); // Hide any previous error
-            } else {
-                // Failed login
-                loginErrorMessage.innerText = "Invalid username or password. Please try again.";
-                loginErrorMessage.classList.remove('hidden');
-                passwordInput.value = ''; // Clear password field
-            }
-        }
-
+        // The handleLogin function is no longer needed
 
         // --- Event Listeners and Initialization ---
 
         window.onload = () => {
-            // 1. Bind the login button explicitly
-            loginButton.addEventListener('click', handleLogin);
-
-            // 2. Bind Enter key press on password/username fields for login
-            usernameInput.addEventListener('keypress', function(e) {
-                if (e.key === 'Enter') handleLogin();
-            });
-            passwordInput.addEventListener('keypress', function(e) {
-                if (e.key === 'Enter') handleLogin();
-            });
-
-            // 3. Bind Enter key press on the chat input field
+            // Only need to bind the Enter key for sending messages now
             userInput.addEventListener('keypress', function(e) {
                 if (e.key === 'Enter') {
                     sendMessage();
                 }
             });
             
-            // Focus on the username field on load
-            usernameInput.focus();
+            // Focus on the chat input field on load
+            userInput.focus();
         };
 
     </script>
