--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Secured Gemini Chat Interface</title>
+    <title>AI Chat (Powered by Gemini)</title>
     <!-- Load Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Load marked.js for Markdown rendering -->
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <style>
         /* Custom styles for aesthetic */
         body {
@@ -14,18 +16,6 @@
             color: #c9d1d9;
             height: 100vh;
             overflow: hidden;
-        }
-        #login-overlay {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(13, 17, 23, 0.95);
-            z-index: 1000;
-            display: flex;
-            align-items: center;
-            justify-content: center;
         }
         .message-box {
             max-width: 768px;
@@ -40,6 +30,36 @@
             background-color: #1e2d3b; /* Dark blue-gray */
             align-self: flex-start;
             border-bottom-left-radius: 0;
+            /* Styling for rendered Markdown output */
+            padding: 1rem;
+        }
+        .model-message h3 {
+            font-size: 1.25rem; /* text-xl */
+            font-weight: 700; /* font-bold */
+            margin-top: 1rem;
+            margin-bottom: 0.5rem;
+            color: #58a6ff;
+            border-bottom: 1px solid #30363d;
+            padding-bottom: 0.25rem;
+        }
+        .model-message table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 1rem;
+            margin-bottom: 1rem;
+            background-color: #161b22;
+        }
+        .model-message th, .model-message td {
+            border: 1px solid #30363d;
+            padding: 0.5rem;
+            text-align: left;
+        }
+        .model-message th {
+            background-color: #1e2d3b;
+            font-weight: 600;
+        }
+        .model-message p {
+            margin-bottom: 0.5rem;
         }
         /* Custom scrollbar for chat history */
         #chat-history::-webkit-scrollbar {
@@ -56,24 +76,9 @@
 </head>
 <body>
 
-    <!-- 1. Login Overlay (COMMENTED OUT TO DISABLE LOGIN) -->
-    <!--
-    <div id="login-overlay" class="p-4">
-        <div class="bg-[#161b22] p-8 rounded-xl shadow-2xl w-full max-w-sm">
-            <h2 class="text-3xl font-bold mb-6 text-center text-[#58a6ff]">Secured Access</h2>
-            <p class="text-red-400 mb-4 text-center hidden" id="login-error-message"></p>
-            <div class="space-y-4">
-                <input type="text" id="username" placeholder="Username" class="w-full p-3 rounded-lg bg-[#0d1117] border border-[#30363d] text-white focus:ring-[#58a6ff] focus:border-[#58a6ff]">
-                <input type="password" id="password" placeholder="Password" class="w-full p-3 rounded-lg bg-[#0d1117] border border-[#30363d] text-white focus:ring-[#58a6ff] focus:border-[#58a6ff]">
-            </div>
-            <button id="login-button" class="w-full mt-6 py-3 bg-[#58a6ff] text-gray-900 font-semibold rounded-lg hover:bg-[#79b8ff] transition duration-200 shadow-md">
-                Log In
-            </button>
-        </div>
-    </div>
-    -->
+    <!-- 1. Login Overlay (Still commented out) -->
 
-    <!-- 2. Main Chat Application (Made visible by removing 'hidden' class) -->
+    <!-- 2. Main Chat Application (Visible by default) -->
     <div id="app" class="h-screen flex flex-col"> 
         <header class="bg-[#161b22] shadow-lg p-4">
             <h1 class="text-2xl font-bold text-[#58a6ff] text-center">AI Chat (Powered by Gemini)</h1>
@@ -100,27 +105,15 @@
         </footer>
     </div>
 
-    <!-- CRITICAL FIX: Added type="text/javascript" to ensure script execution -->
     <script type="text/javascript">
         // --- Global State & Element References ---
         let chatHistory = [];
         const CHAT_ENDPOINT = '/.netlify/functions/gemini-proxy'; 
-        // const loginOverlay = document.getElementById('login-overlay'); // No longer needed
-        const mainApp = document.getElementById('app');
         const chatHistoryDiv = document.getElementById('chat-history');
         const userInput = document.getElementById('user-input');
         const sendButton = document.getElementById('send-button');
         const loadingIndicator = document.getElementById('loading-indicator');
         
-        // Login elements (no longer needed for execution)
-        // const loginButton = document.getElementById('login-button');
-        // const usernameInput = document.getElementById('username');
-        // const passwordInput = document.getElementById('password');
-        // const loginErrorMessage = document.getElementById('login-error-message');
-
-
-        // --- Utility Functions ---
-
         /**
          * Safely scrolls the chat history to the bottom.
          */
@@ -130,6 +123,7 @@
 
         /**
          * Displays a message in the chat history.
+         * Renders Markdown content using marked.js if the role is 'model'.
          * @param {string} text The content of the message.
          * @param {string} role 'user' or 'model'.
          */
@@ -139,7 +133,17 @@
 
             const contentDiv = document.createElement('div');
             contentDiv.className = `message-box p-3 rounded-xl max-w-xl shadow-lg whitespace-pre-wrap ${role === 'user' ? 'user-message' : 'model-message'}`;
-            contentDiv.innerText = text;
+            
+            if (role === 'model') {
+                // *** CRITICAL FIX: Render Markdown using marked.js ***
+                contentDiv.innerHTML = marked.parse(text);
+                // Remove the whitespace-pre-wrap class for model messages to allow 
+                // HTML rendering to manage text flow.
+                contentDiv.classList.remove('whitespace-pre-wrap'); 
+
+            } else {
+                contentDiv.innerText = text;
+            }
 
             messageElement.appendChild(contentDiv);
             chatHistoryDiv.appendChild(messageElement);
@@ -203,12 +207,10 @@
             }
         }
 
-        // The handleLogin function is no longer needed
-
         // --- Event Listeners and Initialization ---
 
         window.onload = () => {
-            // Only need to bind the Enter key for sending messages now
+            // Bind Enter key press on the chat input field
             userInput.addEventListener('keypress', function(e) {
                 if (e.key === 'Enter') {
                     sendMessage();
