--- a/index.html
+++ b/index.html
@@ -76,7 +76,14 @@
 </head>
 <body>
 
-    <!-- 1. Login Overlay (Still commented out) -->
+    <!-- 1. Login Overlay (COMMENTED OUT / DISABLED) -->
+    <!--
+    <div id="login-overlay" class="p-4">
+        <div class="bg-[#161b22] p-8 rounded-xl shadow-2xl w-full max-w-sm">
+            ... (Login HTML) ...
+        </div>
+    </div>
+    -->
 
     <!-- 2. Main Chat Application (Visible by default) -->
     <div id="app" class="h-screen flex flex-col"> 
