--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <script type="text/javascript">
         // --- Global State & Element References ---
         let chatHistory = [];
-        const CHAT_ENDPOINT = '/.netlify/functions/gemini-proxy'; 
+        const CHAT_ENDPOINT = 'https://learn-557942169622.us-central1.run.app';
         const chatHistoryDiv = document.getElementById('chat-history');
         const userInput = document.getElementById('user-input');
         const sendButton = document.getElementById('send-button');
